--- a/ClaimsApplication/src/main/resources/templates/applicationInfo.html
+++ b/ClaimsApplication/src/main/resources/templates/applicationInfo.html
@@ -256,7 +256,7 @@
 
 
 									<div id="dymanicRejectedClaimsId"></div>
-
+									<table id="tempTable"></table>
 
 								</div>
 
@@ -384,34 +384,12 @@
 																							.val(
 																									result.allowableClaims);
 
-																					for (i = 0; i < result.groupsClaimsTotal; i++) {
-
-																						$(
-																								"#dymanicRejectedClaimsId")
-																								.append(
-																										"<div class='form-group'>"
-																												+ "<label class='control-label col-md-3 col-sm-3 col-xs-3' for='claim.objectedNumber'>Claim Numbers: <span	class='required'>*</span></label>"
-																												+ "<div class='col-md-1 col-sm-1 col-xs-1'><input type='text' required='required' th:field='*{claim.rejectedClaims[" + i + "].claimNumbers}' class='form-control col-md-1 col-xs-1' value=" + result.claimsNumbersAsStr[i] + "></div>"
-																												+ "<label class='control-label col-md-1 col-sm-1 col-xs-1' for='claim.objectedStatue'>Statue: <span class='required'>*</span></label>"
-																												+ "<div class='col-md-2 col-sm-2 col-xs-2'><input type='text' id='objectedStatueId' required='required' th:field='*{claim.rejectedClaims[" + i + "].claimStatue}'  class='form-control col-md-2 col-xs-2' value=" + result.claimsStatueAsStr[i] + "></div>"
-																												+ "<label class='control-label col-md-1 col-sm-1 col-xs-1' for='claim.objectedStatue'>Reference: <span class='required'>*</span></label>"
-																												+ "<div class='col-md-2 col-sm-2 col-xs-2'><input type='text' id='objectedStatueId' required='required' th:field='*{claim.rejectedClaims["
-																												+ i
-																												+ "].name}' placeholder='Reference "
-																												+ (i + 1)
-																												+ "' class='form-control col-md-2 col-xs-2' value="
-																												+ result.claimsReferenceAsStr[i]
-																												+ "></div>"
-																												+ "<div class='col-md-2 col-sm-2 col-xs-2'><input type='text' id='objectedStatueId' required='required' th:field='*{claim.rejectedClaims["
-																												+ i
-																												+ "].publicationNumber}' placeholder='Publication No "
-																												+ (i + 1)
-																												+ "' class='form-control col-md-2 col-xs-2' value="
-																												+ result.claimsPubNumAsStr[i]
-																												+ "></div>"
-																												+ "</div>");
-
-																					}
+																					$("#tempTable").append(
+																							
+																							"<tr th:each='claimRow, rowStat: ${claim.rejectedClaims}' >" +  
+																						        "<td th:text='claimRow[rowStat].claimNumbers'></td>" +
+																						    "</tr>"
+																					);
 
 																				},
 																				error : function(
